--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -20,7 +20,9 @@
 
 <!--Custom Styles-->
     <link rel="stylesheet" href="styles/overlays.css">
+    <link rel="stylesheet" href="styles/config.css">
     <link rel="stylesheet" href="styles/styles.css">
+
 <!--Custom Styles-->
 </head>
 <body class="body">
@@ -37,8 +39,8 @@
 
 <!--Game Board-->
     <main>
-
-        <aside class="overlay">
+        <div class="backdrop"></div>
+        <aside class="overlay config">
             <h2>
                 Choose Your Name
             </h2>
