--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -40,12 +40,12 @@
 <!--Game Board-->
     <main>
         <div class="backdrop"></div>
-        <aside class="overlay config">
+        <aside class="overlay config text-center">
             <h2>
                 Choose Your Name
             </h2>
-            <form>
-                <div>
+            <form class="">
+                <div class="playerNameDiv">
                     <label for="playerName">
                         Player Name
                     </label>
