--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -46,23 +46,23 @@
             </h2>
             <form class="">
                 <div class="playerNameDiv">
-                    <label for="playerName">
+                    <label for="playerName" class="d-block mb-1 fw-bold">
                         Player Name
                     </label>
-                    <input type="text" id="playerName" name="playerName">
+                    <input type="text" id="playerName" name="playerName" class="nameInput">
                 </div>
                 <div>
-                    <button type="button" class="btn btn-light btn-outline-danger">
+                    <button type="button" class="btn  btn-danger me-2">
                         Cancel
                     </button>
-                    <button type="submit" class="btn btn-light btn-outline-success">
+                    <button type="submit" class="btn  btn-success ms-2">
                         Confirm
                     </button>
                 </div>
             </form>
         </aside>
 
-        <section id="gameConfig">
+        <section id="gameConfig" class="gameConfig">
             <ol>
                 <li>
                     <article>
