--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -62,7 +62,7 @@
             </form>
         </aside>
 
-        <section id="gameConfig" class="gameConfig">
+        <section id="gameConfig" class="gameConfig text-center">
             <ol>
                 <li>
                     <article>
@@ -70,7 +70,7 @@
                             Player 1
                         </h2>
                         <h3>
-                            Player Nme
+                            Player Name
                         </h3>
                         <p>
                             X
