--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -63,8 +63,8 @@
         </aside>
 
         <section id="gameConfig" class="gameConfig text-center">
-            <ol>
-                <li>
+            <ol class="d-flex listStyle">
+                <li class="">
                     <article>
                         <h2>
                             Player 1
@@ -80,7 +80,7 @@
                         </button>
                     </article>
                 </li>
-                <li>
+                <li class="">
                     <article>
                         <h2>
                             Player 2
