--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -75,7 +75,7 @@
                         <p>
                             X
                         </p>
-                        <button class="btn btn-dark btn-outline-light">
+                        <button class="btn  btn-outline-light">
                             Edit
                         </button>
                     </article>
@@ -91,7 +91,7 @@
                         <p>
                             O
                         </p>
-                        <button class="btn btn-dark btn-outline-light">
+                        <button class="btn  btn-outline-light">
                             Edit
                         </button>
                     </article>
