--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -81,7 +81,7 @@
                         <p>
                             X
                         </p>
-                        <button class="btn  btn-outline-light">
+                        <button class="btn text-light">
                             Edit
                         </button>
                     </article>
@@ -97,12 +97,13 @@
                         <p>
                             O
                         </p>
-                        <button class="btn  btn-outline-light">
+                        <button class="btn text-light">
                             Edit
                         </button>
                     </article>
                 </li>
             </ol>
+            <button class="btn btn-lg text-light">Start New Game</button>
         </section>
 <!--Game Config-->
 
