--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -128,16 +128,16 @@
             </p>
 
             <ol id="gameBoard" class="gameBoard">
-                <li></li>
-                <li></li>
-                <li></li>
-
-                <li></li>
-                <li ></li>
+                <li class="disabled">X</li>
+                <li>O</li>
                 <li></li>
 
                 <li></li>
+                <li>X</li>
                 <li></li>
+
+                <li>O</li>
+                <li>X</li>
                 <li></li>
             </ol>
         </section>
