--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -25,6 +25,12 @@
     <link rel="stylesheet" href="styles/styles.css">
 <!--Custom Styles-->
 
+<!--JS-->
+    <script src="scripts/app.js" defer></script>
+    <script src="scripts/config.js" defer></script>
+    <script src="scripts/game.js" defer></script>
+<!--JS-->
+
 </head>
 
 <body class="body">
@@ -81,7 +87,7 @@
                         <p>
                             X
                         </p>
-                        <button class="btn text-light">
+                        <button id="editP1Btn" class="btn text-light">
                             Edit
                         </button>
                     </article>
@@ -97,7 +103,7 @@
                         <p>
                             O
                         </p>
-                        <button class="btn text-light">
+                        <button id="editP2Btn" class="btn text-light">
                             Edit
                         </button>
                     </article>
