--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -49,8 +49,8 @@
     <main>
 
 <!--Modal-->
-        <div class="backdrop"></div>
-        <aside class="overlay config text-center">
+        <div id="backdrop" class="backdrop"></div>
+        <aside id="overlay" class="overlay config text-center">
             <h2>
                 Choose Your Name
             </h2>
