--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -62,10 +62,10 @@
                     <input type="text" id="playerName" name="playerName" class="nameInput">
                 </div>
                 <div>
-                    <button type="button" class="btn  btn-danger me-2">
+                    <button id="cancelBtn" type="button" class="btn btn-danger me-2">
                         Cancel
                     </button>
-                    <button type="submit" class="btn  btn-success ms-2">
+                    <button id="confirmBtn" type="submit" class="btn btn-success ms-2">
                         Confirm
                     </button>
                 </div>
