--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -54,7 +54,7 @@
             <h2>
                 Choose Your Name
             </h2>
-            <form class="">
+            <form id="configForm">
                 <div class="playerNameDiv">
                     <label for="playerName" class="d-block mb-1 fw-bold">
                         Player Name
