--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -55,12 +55,13 @@
                 Choose Your Name
             </h2>
             <form id="configForm">
-                <div class="playerNameDiv">
+                <div id="playerNameDiv" class="playerNameDiv">
                     <label for="playerName" class="d-block mb-1 fw-bold">
                         Player Name
                     </label>
                     <input type="text" id="playerName" name="playerName" class="nameInput">
                 </div>
+                <p id="configErr"></p>
                 <div>
                     <button id="cancelBtn" type="button" class="btn btn-danger me-2">
                         Cancel
