--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <p id="configErr"></p>
                 <div>
-                    <button id="cancelBtn" type="button" class="btn btn-danger me-2">
+                    <button id="cancelBtn" type="reset" class="btn btn-danger me-2">
                         Cancel
                     </button>
                     <button id="confirmBtn" type="submit" class="btn btn-success ms-2">
