--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -82,29 +82,29 @@
                         <h2>
                             Player 1
                         </h2>
-                        <h3>
+                        <h3 id="p1Data">
                             Player Name
                         </h3>
                         <p>
                             X
                         </p>
-                        <button id="editP1Btn" class="btn text-light">
+                        <button id="editP1Btn" class="btn text-light" data-playerID="1">
                             Edit
                         </button>
                     </article>
                 </li>
                 <li class="">
-                    <article>
+                    <article >
                         <h2>
                             Player 2
                         </h2>
-                        <h3>
+                        <h3 id="p2Data">
                             Player Name
                         </h3>
                         <p>
                             O
                         </p>
-                        <button id="editP2Btn" class="btn text-light">
+                        <button id="editP2Btn" class="btn text-light" data-playerID="2">
                             Edit
                         </button>
                     </article>
