--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -88,7 +88,7 @@
                         <p>
                             X
                         </p>
-                        <button id="editP1Btn" class="btn text-light" data-playerID="1">
+                        <button id="editP1Btn" class="btn text-light" data-playerid="1">
                             Edit
                         </button>
                     </article>
@@ -104,7 +104,7 @@
                         <p>
                             O
                         </p>
-                        <button id="editP2Btn" class="btn text-light" data-playerID="2">
+                        <button id="editP2Btn" class="btn text-light" data-playerid="2">
                             Edit
                         </button>
                     </article>
