--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -110,7 +110,7 @@
                     </article>
                 </li>
             </ol>
-            <button class="btn btn-lg text-light">Start New Game</button>
+            <button id="startGameBtn" class="btn btn-lg text-light">Start New Game</button>
         </section>
 <!--Game Config-->
 
@@ -135,16 +135,16 @@
             </p>
 
             <ol id="gameBoard" class="gameBoard">
-                <li class="disabled">X</li>
-                <li>O</li>
+                <li></li>
+                <li></li>
                 <li></li>
 
                 <li></li>
-                <li>X</li>
+                <li></li>
                 <li></li>
 
-                <li>O</li>
-                <li>X</li>
+                <li></li>
+                <li></li>
                 <li></li>
             </ol>
         </section>
