--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -116,8 +116,8 @@
 
 <!--Game Field-->
         <section id="gameField" class="gameField text-center">
-            <article>
-                <h3>
+            <article class="gameFieldArticle">
+                <h3 id="winner">
                     You Won <span id="winnerName">
                     PlayerName
                 </span>
@@ -127,7 +127,7 @@
                 </p>
             </article>
             
-            <p>
+            <p id="activePlayer">
                 Its Your Turn:
                 <span id="activePlayerName" class="activePlayerName">
                     PlayerName
