--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -116,7 +116,7 @@
 
 <!--Game Field-->
         <section id="gameField" class="gameField text-center">
-            <article class="gameFieldArticle">
+            <article id="gameFieldArticle" class="gameFieldArticle">
                 <h3 id="winner">
                     You Won <span id="winnerName">
                     PlayerName
