Node Express Review

--- a/Node/index.html
+++ b/Node/index.html
@@ -10,7 +10,14 @@
 <body>
 
 <form action="/stored-user" method="post">
-    <label for="enteredNamed">Enter Your Name</label>
+    <label for="enteredNamed">
+        Enter Your Name
+    </label>
+    <input type="text"
+           name="enteredNamed"
+           id="enteredNamed"
+           placeholder="ex. John Doe">
+    <button type="submit">Submit</button>
 </form>
 
 </body>
