Node Express Review

--- a/Node/index.html
+++ b/Node/index.html
@@ -10,12 +10,12 @@
 <body>
 
 <form action="/stored-user" method="post">
-    <label for="enteredNamed">
+    <label for="enteredName">
         Enter Your Name
     </label>
     <input type="text"
-           name="enteredNamed"
-           id="enteredNamed"
+           name="enteredName"
+           id="enteredName"
            placeholder="ex. John Doe">
     <button type="submit">Submit</button>
 </form>
