--- a/Restaurant/frontend/confirm.html
+++ b/Restaurant/frontend/confirm.html
@@ -6,8 +6,50 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Confirm</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;700&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/shared.css" />
+    <script src="scripts/responsive.js" defer></script>
 </head>
 <body>
-
+<header id="main-header">
+    <div id="logo"><a href="index.html">Eatwell</a></div>
+    <nav>
+        <ul>
+            <li class="nav-item">
+                <a href="restaurants.html">Browse Restaurants</a>
+            </li>
+            <li class="nav-item">
+                <a href="recommend.html">Share a Restaurant</a>
+            </li>
+            <li class="nav-item"><a href="about.html">About Eatwell</a></li>
+        </ul>
+    </nav>
+    <button id="drawer-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+</header>
+<aside id="mobile-drawer">
+    <nav>
+        <ul>
+            <li class="nav-item">
+                <a href="restaurants.html">Browse Restaurants</a>
+            </li>
+            <li class="nav-item">
+                <a href="recommend.html">Share a Restaurant</a>
+            </li>
+            <li class="nav-item"><a href="about.html">About Eatwell</a></li>
+        </ul>
+    </nav>
+</aside>
+<main>
+    <h1>Success!</h1>
+    <p>Your restaurant was successfully added to our list!</p>
+</main>
 </body>
 </html>
